apps/registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-service
  namespace: registry
  labels:
    app: registry
spec:
  selector:
    app: registry
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: http
  type: ClusterIP
